[gd_scene load_steps=9 format=2]

[ext_resource path="res://animation/explosion.tres" type="SpriteFrames" id=1]
[ext_resource path="res://assets/actors/helicopter-body.png" type="Texture" id=2]
[ext_resource path="res://actors/Helli.gd" type="Script" id=3]
[ext_resource path="res://assets/actors/helicopter-rotor.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=7]
height = 78.0

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 93, 93, 93 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 300.0

[node name="Helli" type="KinematicBody2D" groups=["air"]]
collision_layer = 128
collision_mask = 0
input_pickable = true
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 7 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 8, 0 )

[node name="Rotor" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
playing = true

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = ExtResource( 1 )

[node name="GunTimer" type="Timer" parent="."]

[node name="DetectRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
position = Vector2( -1, 0 )
shape = SubResource( 6 )

[node name="HealthBar" type="ColorRect" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = -7.0
color = Color( 0, 0, 0, 1 )

[connection signal="input_event" from="." to="." method="_on_Helli_input_event"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
